# POOPy

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  poopy.py  pyproject.toml  setup.py
.github/workflows/: run-tests.yml
examples/: current_status.ipynb  current_status.py  historical_status.ipynb
poopy/: __init__.py  aux.py  cfuncs.pyx  companies.py  d8_accumulator.py  poopy.py  profiler.py  utils.py
poopy/companies/: __init__.py  anglian_water.py  northumbrian_water.py  scottish_water.py  severn_trent.py  southern_water.py  southwest_water.py  thames_water.py  united_utilities.py  welsh_water.py  wessex_water.py  yorkshire_water.py
tests/: test_watercompanies.py
